# melody-flow

./: .env.example  .gitignore  Dockerfile  Dockerfile.generate  Makefile  PIPELINE.md  README.md  docker-compose.yaml  dvc.yaml  package.json  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/raw/: .gitignore
docs/: architecture.md  deplow_guide_to_aws.md  deploy_guide_to_aws.md  plan_of_architecture_enhance.md  project_summary.md  telemetry_policy.md
models/: .gitignore  production.pth.dvc
nginx/: nginx.conf  nginx_http_cache.conf  nginx_http_only.conf  nginx_https.conf
scripts/: dump_source.sh  warmup.sh
src/: api.py  chord_name_parser.py  inferance.py  make_dataset.py  melody_processor.py  train_model.py
src/adhoc/: data_viewer.py
src/api/: config.py  main.py  services.py
src/eda/: audio.py  cache_viewer.py  data_viewer.py  png_viewer.py
src/melody_flow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model/: audio.py  chord_name_parser.py  evaluate.py  inference.py  make_dataset.py  melody_processor.py  train_model.py  utils.py  visualize.py
src/promotion/: make_qr.py
src/warmup/: generate_static_cache.py  generate_warmup_data.py
static/: app.html  index.html  main.js  midi-test.html  presentation.html  presentation_final.html  presentation_final.txt  site.html
tests/: test_api.py  test_api_main.py  test_chord_name_parser.py  test_inference.py  test_make_dataset.py  test_melody_processor.py  test_model_evaluate.py  test_model_utils.py  test_train_model.py
tests/js/: chord.test.js
