[project]
name = "melody-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "gradio>=5.44.1",
    "loguru>=0.7.3",
    "symusic>=0.5.8",
    "torch>=2.8.0",
    "transformers==4.55.4",
    "trl<0.19.1",
    "typed-argument-parser>=1.10.1",
    "unsloth==2025.7.2",
    "uvicorn>=0.35.0",
    "beautifulsoup4>=4.12.3",
    "wandb>=0.22.0",
    "weave>=0.52.8",
    "midi2audio>=0.1.1",
    "mido>=1.3.3",
    "lxml>=6.0.1",
    "python-dotenv>=1.1.1",
    "fluidsynth>=0.2",
    "matplotlib>=3.10.6",
]

[project.optional-dependencies]
dev = [
    "dvc[dev,gdrive]>=3.62.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[project.scripts]
generate-cache = "src.warmup.generate_static_cache:main"

[tool.ruff]
line-length = 99
src = ["llm_classification"]
include = ["pyproject.toml", "src/**/*.py"]
exclude = []

[tool.ruff.lint]
# flake8の主要なルールと一般的なプラグインのルールを選択
# F: Pyflakes, E/W: pycodestyle, I: isort, B: flake8-bugbear, C4: flake8-comprehensions など
# select = ["A", "B", "C4", "E", "F", "I", "SIM", "UP", "W"]
select = ["A", "B", "C4", "E", "F", "SIM", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = []
force-sort-within-sections = true

# black互換のフォーマッタを有効化
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
